--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "main": "cud.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon core/crud.js"
+    "start:crud": "npx ts-node ./core/crud.ts",
+    "dev:crud": "nodemon --ext ts,tsx --exec npx ts-node ./core/crud.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "nodemon": "^3.0.1"
+    "@types/node": "^20.5.7",
+    "nodemon": "^3.0.1",
+    "typescript": "^5.2.2"
   }
 }
