--- a/package.json
+++ b/package.json
@@ -6,14 +6,26 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:crud": "npx ts-node ./core/crud.ts",
-    "dev:crud": "nodemon --ext ts,tsx --exec npx ts-node ./core/crud.ts"
+    "dev:crud": "nodemon --ext ts,tsx --exec npx ts-node ./core/crud.ts",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "@types/node": "^20.5.7",
+    "@types/uuid": "^9.0.3",
+    "next": "^13.4.19",
     "nodemon": "^3.0.1",
-    "typescript": "^5.2.2"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "typescript": "^5.2.2",
+    "uuid": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/react": "18.2.21"
   }
 }
