--- a/package.json
+++ b/package.json
@@ -4,14 +4,16 @@
   "description": "",
   "main": "cud.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start:crud": "npx ts-node ./core/crud.ts",
     "dev:crud": "nodemon --ext ts,tsx --exec npx ts-node ./core/crud.ts",
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "eslint \"./**/*.{js,jsx,ts,tsx}\"",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "npm run lint -- --fix",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "test": "start-server-and-test dev http://localhost:3000 cy:run"
   },
   "keywords": [],
   "author": "",
@@ -19,6 +21,7 @@
   "dependencies": {
     "@types/node": "^20.5.7",
     "@types/uuid": "^9.0.3",
+    "cypress": "^13.3.0",
     "next": "^13.4.19",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
@@ -38,6 +41,7 @@
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "nodemon": "^2.0.21",
-    "prettier": "^2.8.7"
+    "prettier": "^2.8.7",
+    "start-server-and-test": "^2.0.1"
   }
 }
