--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -10,6 +10,6 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: "Install dependendcies"
-        run: "npm install"
+        run: "npm ci"
       - name: "Lint"
         run: "npm run lint"
