--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -4,6 +4,11 @@ on:
   pull_request:
     types: [opened, synchronize]
 
+env:
+  VERCEL_TOKEN: muH4JZz1x9jMoKPsiAnGWbRD
+  VERCEL_ORG_ID: team_mto8fzSd5i3z9qcyH6wLxo7b
+  VERCEL_PROJECT: prj_pUT2gtygKYLe9S28QyyPGPlkX7It
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -12,4 +17,4 @@ jobs:
       - name: "Install dependendcies"
         run: "npm ci"
       - name: "Deploy"
-        run: "npx vercel --prod --token=muH4JZz1x9jMoKPsiAnGWbRD"
+        run: "npx vercel --prod"
