--- a/.github/workflows/continuous-delivery.yml
+++ b/.github/workflows/continuous-delivery.yml
@@ -1,8 +1,12 @@
 name: "[CD] Continuous Delivery"
 
+# on:
+#   pull_request:
+#     types: [opened, synchronize]
+
 on:
-  pull_request:
-    types: [opened, synchronize]
+  push:
+    branches: [main]
 
 env:
   VERCEL_ORG_ID: team_mto8fzSd5i3z9qcyH6wLxo7b
