--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@types/node": "^20.5.7",
     "@types/uuid": "^9.0.3",
     "cypress": "^13.3.0",
-    "next": "^13.4.19",
+    "next": "14.0.1",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
